# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import appointmentsRouter from "./appointments";
+import servicesRouter from "./services";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(appointmentsRouter);
+router.use(servicesRouter);
 
 export default router;
